--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <div class="header">
-        <div class="nav"></div>
+        <div class="nav">
+            <p>Бля наконецто у меня получилось все зделать по убунтой  ахахаххах</p>
+    </div>
         <div class="bar"></div>
     </div>
+
     <script src="ap.js"></script>
 </body>
 </html>
