--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,15 @@
     <div class="header">
         <div class="nav">
             <p>Бля наконецто у меня получилось все зделать по убунтой  ахахаххах</p>
+            <p>sadsadsadas</p>
     </div>
         <div class="bar"></div>
+        <div class="col"></div>
     </div>
-
+        <div class="menu">
+            <h2>Этот Ипаный гид сводит меня с ума с этим драник кодом</h2>
+            <input type="text" name="text">
+        </div>
     <script src="ap.js"></script>
 </body>
 </html>
