--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,9 @@
             <p>sadsadsadas</p>
     </div>
         <div class="bar"></div>
-        <div class="col"></div>
+         <div class="bar nav">
+             <h4>я всетаки задолбил сраный код</h4>
+         </div>      
     </div>
         <div class="menu">
             <h2>Этот Ипаный гид сводит меня с ума с этим драник кодом</h2>
